Remove unneccessary final modifiers